# mola_lidar_odometry

./: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/: check_style.sh
.github/workflows/: build-ros.yml
apps/: mola-erathos-lidar-inertial-odometry.cpp  mola-lidar-inertial-odometry.cpp  mola-lidar-odometry-cli.cpp  mola-lidar-odometry-graph-cli.cpp
docs/: module-erathos-slam.rst  module-lidar-slam.rst  mola_lidar_odometry.rst  mola_lidar_odometry_cli.rst  mola_lo_apps.rst  mola_lo_demos.rst  mola_lo_pipelines.rst  mola_lo_ros.rst
docs/imgs_sources/: gui_parts.odp
eval/: cli_kitti.sh  cli_kitti360.sh  cli_kitti_ndt.sh  cli_mulran.sh  gui_backpack_ual_citeIV.sh  gui_kitti.sh  gui_mulran.sh  gui_paris_luco.sh  gui_rawlog.sh  gui_rosbag2.sh  gui_vlp16_ual_campus_2018_dataset_1.sh  gui_vlp16_ual_campus_2018_dataset_2.sh  kitti.sh  mola-lo-gui-kitti  mola-lo-gui-kitti360  mola-lo-gui-mulran  mola-lo-gui-rawlog  mola-lo-gui-rosbag2  vlp16_ual_campus_2018_dataset.sh
include/erathos_slam/: LidarInertialOdometry.h  OccGrid.h
include/mola_erathos_slam/: LidarInertialOdometry.h
include/mola_lidar_odometry/: LidarInertialOdometry.h  LidarOdometry.h
include/mola_lidar_slam/: LidarInertialOdometry.h
launch/: erathos_icp_odometry_from_ros2.yaml  lidar_odometry_from_kitti.yaml
module/include/mola_lidar_odometry/: LidarOdometry.h
module/src/: LidarOdometry.cpp  register.cpp
module/tests/: CMakeLists.txt
mola-cli-launchs/: lidar_odometry_from_kitti.yaml  lidar_odometry_from_kitti360.yaml  lidar_odometry_from_kitti_output_ros2.yaml  lidar_odometry_from_mulran.yaml  lidar_odometry_from_paris_luco.yaml  lidar_odometry_from_rawlog.yaml  lidar_odometry_from_ros2.yaml  lidar_odometry_from_rosbag2.yaml  lidar_odometry_ros2.yaml
params/: config-lidar-inertial-odometry.yaml  graph_filter_pipeline.yaml  icp-pipeline-kissicp-like.yaml  icp-pipeline-simple.yaml  icp-pipeline.yaml  icp-pipeline_no_motion_model.yaml  icp_graph_params.yaml  icp_odom_params.yaml  icp_odom_params_no_motion_model.yaml  icp_odom_without_velocity_model_params.yaml  lidar-inertial-pipeline-kissicp-like.yaml  lidar-inertial-pipeline-simple.yaml  lidar-inertial-pipeline.yaml  lidar-odometry-pipeline-default.yaml  lidar-odometry-pipeline-dual.yaml  lidar-odometry-pipeline-edges.yaml  lidar-odometry-pipeline-kissicp-like.yaml  lidar3d-default.yaml  localmap_definition_pointmap.ini  localmap_definition_voxelmap.ini  localmap_generator.yaml  localmap_multimetricmap_definition.ini  localmap_multimetricmap_definition_for_2d_lidar.ini  localmap_postgeneration_filter_pipeline.yaml  observations_filter_pipeline.yaml  observations_generator.yaml  pointcloud_filter_pipeline.yaml
params/extras/: icp-pipeline_no_motion_model.yaml  lidar3d-kissicp-like.yaml  localmap_definition_pointmap.ini
pipelines/: lidar2d.yaml  lidar3d-default.yaml  lidar3d-ndt.yaml  rgbd.yaml
pipelines/extras/: lidar3d-dual-map.yaml  lidar3d-edges.yaml  lidar3d-intensity.yaml  lidar3d-kissicp-like.yaml  lidar3d-near-far.yaml  localmap_definition_pointmap.ini
ros2-launchs/: kitti-lidar-odometry.launch.py  lidar-odometry.launch.py  ros2-lidar-odometry.launch.py
rviz2/: kitti-lidar-odometry.rviz  lidar-odometry.rviz
scripts/: README.md  mola-lo-gui-kitti  mola-lo-gui-kitti360  mola-lo-gui-mulran  mola-lo-gui-rawlog  mola-lo-gui-rosbag2
src/: LidarInertialOdometry.cpp  LidarOdometry.cpp  OccGrid.cpp  register.cpp
test/: CMakeLists.txt  kitti_00_fragment_gt.tum  rslidar_fragment_gt.tum  test_lidar_odometry_kitti.cpp  test_lidar_odometry_rawlog.cpp  test_lidar_odometry_rosbag2.cpp
tests/: CMakeLists.txt  test-occgrid.cpp
