<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_lidar_odometry</name>
  <version>0.2.2</version>
  <description>LIDAR odometry system based on MOLA and MRPT components</description>

  <author     email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>
  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>

  <url type="website">https://github.com/MOLAorg/</url>

  <license>GPLv3</license>

  <depend>mola_common</depend>
  <depend>mola_kernel</depend>
  <depend>mp2p_icp</depend>
  <depend>mola_navstate_fuse</depend>
  <depend>mrpt2</depend>

  <!-- dataset input sources (all are actually optional) -->
  <depend>mola_input_kitti_dataset</depend>
  <depend>mola_input_kitti360_dataset</depend>
  <depend>mola_input_mulran_dataset</depend>
  <depend>mola_input_rawlog</depend>
  <depend>mola_input_rosbag2</depend>
  <depend>mola_input_paris_luco</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->



</package>
